src/public/css/store.css
/* ... */
 .plx-bottom-menu>div>a>i {
  font-size:28px;
  margin:4px;
  color:var(--accent-color-dim)
 }
 .plx-bottom-menu>.minibar {
  margin:0;
  background:#1118
 }
 #offcanvas-arrivals {
  opacity:0;
  padding:10px;
  pointer-events:none;
  transition:opacity .5s ease;
  display:flex!important;
  flex-direction:column-reverse
 }
 #offcanvas-arrivals.plx-open {
  pointer-events:all;
  opacity:1
 }
 #offcanvas-arrivals .storeside {
  position:relative;
  border-radius:10px
 }
 .storeside>.plx-sticky-placeholder {
  width:80px
 }
 #filter-arrivals {
  z-index:1;
  padding:0 0 50px;
  box-sizing:border-box!important
 }
 .plx-active#filter-arrivals {
  padding-top:50px
 }
 .store-nav {
  flex-direction:column
 }
 .store-nav.plx-active {
  max-width:300px
 }
 .store-main {
 }
 @media screen and (max-width:900px) {
  .store-sidebar label {
   display:none
  }
  .store-sidebar {
   min-width:100px
  }
 }
 .store-main li ul {
  justify-content:space-around;
  padding:0
 }
 li#arrivals {
  width:100%;
  flex:1 1 auto
 }
 .store-main>li>ul>li,
 .store-main>li>ul::after,
 #arrivals1>li,
 #arrivals1::after {
  list-style:none;
  min-width:235px;
  max-width:300px;
  flex:1 1 0
 }
 #marketplace>ul>li,
 #marketplace>ul>li:after {
  min-width:320px;
  max-width:420px;
  flex:1 0 0
 }
 .store-main>li>ul::after,
 #arrivals1::after {
  content:'';
  padding:8px;
  display:flex
 }
 #backgrounds>ul>li {
  flex:1 1 25%
 }
 @media screen and (max-width:500px) {
  #backgrounds>ul {
  }
 }
 .storeside .plx-button {
  width:80px;
  height:80px;
  display:flex;
  flex-direction:column;
  min-width:0
 }
 .storeside i {
  font-size:24px
 }
 .storeside a {
  font-size:8px;
  line-height:1.5
 }
 .storeside .menuitem.plx-active {
  background:var(--dark-dimmer)
 }
 .wealth {
  height:50px;
  display:flex;
  align-items:center;
  justify-content:right;
  padding:12px 50px 0;
  font-size:12px;
  font-family:panton;
  font-weight:900;
  background:#001d;
  backdrop-filter:blur(3px)
 }
 .wealth.plx-active {
  transform:translateY(50px);
  z-index:5
 }
 .wealth>div {
  margin:12px
 }
 #backgrounds li {
  min-width:300px;
  max-width:380px;
  flex:1 1 0;
  list-style:none
 }
 .obtained {
  opacity:.8
 }
 .obtained .footer {
  flex-wrap:nowrap;
  justify-content:space-evenly!important
 }
 .obtained .footer .button {
  width:auto;
  text-align:center
 }
 .obtained .button .price {
  margin-right:16px!important;
  font-size:18px!important
 }
 .obtained .footer .button i {
  font-size:20px;
  margin:3px 0 0!important
 }
 .sellbut {
 }
 @media screen and (max-width:500px) {
  .obtained .footer .button {
   width:auto;
   height:30px;
   transform:scale(1)!important;
   text-align:center
  }
  .obtained .button .price {
   margin-right:8px!important;
   font-size:14px!important
  }
  .obtained .footer .button i {
   margin:0;
   font-size:18px;
   margin:3px 0 0!important
  }
  .storeside {
   width:0
  }
  .wealth.plx-active {
   z-index:100;
   padding:12px 90px 4px 0;
   text-align:center;
   transform:none!important
  }
  .wealth>* {
   text-align:center
  }
  .wealth .icon32 {
   height:22px;
   margin-bottom:-5px
  }
  .storeside ul {
   position:absolute;
   z-index:4;
   flex-direction:row;
   width:90%!important;
   display:flex;
   height:60px;
   justify-content:center;
   background:#001a;
   backdrop-filter:blur(3px);
   padding-left:10px;
   border-top:solid 1px var(--accent-color);
   border-bottom:solid 1px #aaf2
  }
  .storeside .plx-button {
   width:60px;
   height:60px
  }
  .storeside .menuitem.plx-active {
   background:linear-gradient( var(--accent-color) -150%,#0000 70%);
   border-top:solid 1px var(--accent-color);
   height:80px
  }
  #arrivals1 {
   margin-top:60px
  }
  .plx-active#filter-arrivals {
   padding-top:0!important
  }
  .store-nav {
   width:60px!important;
   margin-left:0
  }
  .store-nav:not(.plx-active)>li>a {
   margin-left:-20px
  }
  .store-sidebar {
   min-width:60px
  }
  .store-sidebar .plx-button>i {
   margin-left:-10px!important;
   padding:0!important
  }
  .megastroke * {
   -webkit-text-stroke:none
  }
  #arrivals1 .shopbox .button {
   transform:scale(.8)
  }
  * {
   -webkit-text-stroke:0!important
  }
  .shopbox {
   min-width:250px;
   height:300px
  }
  .shopbox-mdl,
  .shopbox-bii,
  .shopbox-wide {
   width:220px;
   margin:-30px auto!important
  }
  #arrivals1 {
   //max-width:300px
  }
  #backgrounds>ul {
  }
  #medals .button {
   transform:scale(.8)
  }
  .store-main>li>ul>li,
  .store-main>li>ul::after,
  #arrivals1>li,
  #arrivals1::after {
   list-style:none;
   min-width:135px;
   max-width:300px;
   flex:1 1 0
  }
 }
 #backgrounds>ul,
 #medals>ul,
 #arrivals>ul,
 #marketplace>ul {
  padding-bottom:5rem;
  margin-bottom:5rem
 }
 .bg-on-ppc {
  display:flex;
  margin:20px;
  transform:perspective(1500px) rotateY(-20deg) rotateX(2deg) rotateZ(1deg)
 }
 .medal-container {
  display:flex;
  align-items:center;
  height:100%
 }
 .medal-container .medal {
  height:100px;
  width:100px;
  margin:auto;
  animation:medalfloat 3s ease-in-out infinite
 }
 .medal-container .medal:after {
  content:" ";
  display:block;
  height:100px;
  width:100px;
  background-image:inherit;
  transform:translateY(100px) scale(.9,.3);
  filter:brightness(0) blur(5px);
  opacity:.38;
  animation:shadowfloat 3s ease-in-out infinite
 }
 @keyframes medalfloat {
  50% {
   transform:translateY(-10px)
  }
 }
 @keyframes shadowfloat {
  0% {
   transform:translateY(100px) scale(.9,.3)
  }
  50% {
   transform:translateY(110px) scale(.6,.2);
   filter:brightness(0) blur(10px);
   opacity:.3
  }
 }
 .the-sticker,
 .the-booster {
  height:50vh;
  background-repeat:no-repeat;
  background-position:center;
  background-size:contain;
  display:block
 }
 .the-sticker {
  background-size:80%
 }
 @media screen and (min-width:1000px) {
  .the-booster {
   //animation:booster-reveal1.5seaseforwards
  }
  .the-sticker {
   //animation:sticker-reveal1.5seaseforwards
  }
 }
/* ... */

